src/objects/hed__Time_Block__c.object
<CustomObject>
    <description>Represents a block of time in which classes are held.</description>
    <fields>
        <fullName>hed__Educational_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Educational Institution associated with this Time Block. For example, a school within a district.</description>
        <inlineHelpText>The Educational Institution associated with this Time Block. For example, a school within a district.</inlineHelpText>
        <label>Educational Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Time Blocks</relationshipLabel>
        <relationshipName>Time_Blocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__End_Time__c</fullName>
        <description>The time of day the Time Block ends.</description>
        <inlineHelpText>The time of day the Time Block ends.</inlineHelpText>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>hed__Start_Time__c</fullName>
        <description>The time of day the Time Block starts.</description>
        <inlineHelpText>The time of day the Time Block starts.</inlineHelpText>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <label>Time Block</label>
    <listViews>
        <fullName>hed__All</fullName>
        <columns>NAME</columns>
        <columns>hed__Start_Time__c</columns>
        <columns>hed__End_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Time Block Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Blocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>